--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "mantrailling",
   "dependencies": {
     "jquery": "^1.11.1",
-    "ember": "1.10.0",
+    "ember": "1.11.3",
     "ember-data": "1.0.0-beta.16",
     "ember-resolver": "~0.1.14",
     "loader.js": "ember-cli/loader.js#3.2.0",
@@ -11,6 +11,16 @@
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
     "ember-qunit": "0.2.8",
     "ember-qunit-notifications": "0.0.7",
-    "qunit": "~1.17.1"
+    "qunit": "~1.17.1",
+    "ol3": "https://github.com/openlayers/ol3/releases/download/v3.4.0/v3.4.0.zip",
+    "bootstrap": "~3.3.4",
+    "hint.css": "~1.3.4",
+    "pikaday": "~1.3.2",
+    "moment": "~2.9.0",
+    "normalize.css": "~3.0.3",
+    "jquery-rotate": "~0.1.0",
+    "Sortable": "~1.1.1",
+    "jquery-ui": "~1.11.4",
+    "x-editable": "~1.5.1"
   }
 }
