--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "0.2.1",
+    "broccoli-merge-trees": "~0.2.1",
+    "broccoli-static-compiler": "~0.2.1",
+    "ember-cli": "0.2.3",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^4.0.0",
     "ember-cli-content-security-policy": "0.4.0",
+    "ember-cli-datepicker": "2.0.1",
     "ember-cli-dependency-checker": "0.0.8",
     "ember-cli-htmlbars": "0.7.4",
     "ember-cli-ic-ajax": "0.1.1",
@@ -31,6 +34,10 @@
     "ember-cli-qunit": "0.3.9",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "ember-localstorage-adapter": "~0.5.3"
+  },
+  "dependencies": {
+    "ember-radio-buttons": "^3.0.1"
   }
 }
