--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "bootstrap": "~3.3.4",
     "ol3": "~3.4.0",
-    "jquery.splitter": "~0.14.0"
+    "jquery.splitter": "~0.14.0",
+    "moment": "~2.10.2",
+    "pikaday": "~1.3.2"
   }
 }
