ajout du command controller et de son injection dans tous les controllers

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,8 +3,10 @@
     "document",
     "window",
     "-Promise",
+    "Promise",
     "ol",
-    "$"
+    "$",
+    "google"
   ],
   "browser": true,
   "boss": true,
