--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember-data": "1.0.0-beta.18",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
+    "ember-i18n": "4.0.0-beta.2",
     "ember-localstorage-adapter": "~0.5.3",
     "ember-radio-buttons": "^3.0.1"
   }
