--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,10 @@
     "jquery-rotate": "~0.1.0",
     "Sortable": "~1.1.1",
     "jquery-ui": "~1.11.4",
-    "x-editable": "~1.5.1"
+    "x-editable": "~1.5.1",
+    "spin.js": "~2.3.1"
+  },
+  "devDependencies": {
+    "cropper": "~0.10.0"
   }
 }
