--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ember-export-application-global": "^1.0.2",
     "ember-i18n": "4.0.0-beta.2",
     "ember-localstorage-adapter": "~0.5.3",
-    "ember-radio-buttons": "^3.0.1"
+    "ember-radio-buttons": "^3.0.1",
+    "ember-spinner-button": "0.0.9"
   }
 }
