--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
-    "ol3": "https://github.com/openlayers/ol3/releases/download/v3.6.0/v3.6.0.zip",
+    "ol3": "https://github.com/openlayers/ol3/releases/download/v3.5.0/v3.5.0.zip",
     "bootstrap": "~3.3.4",
     "hint.css": "~1.3.4",
     "pikaday": "~1.3.2",
@@ -25,6 +25,7 @@
     "spin.js": "~2.3.1"
   },
   "devDependencies": {
-    "cropper": "~0.10.0"
+    "cropper": "~0.10.0",
+    "font-awesome": "~4.3.0"
   }
 }
